--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=AuthorisationandAuthentication
 server.port=8000
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3308/Auth?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3308/systems?useSSL=false&serverTimezone=UTC
 
 spring.datasource.username=root
 spring.datasource.password=5418feliX
+logging.level.org.springframework.security=DEBUG
 
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
